	     friendly version.
	   - Fixed a problem with the groups directory not being deleted.
	   - Fixed a problem with not being able to add users to a group.
	   - Fixed bad links in calendar
	   - Added feature to be able to remove users from a group automaticly
	   - changetheme.php will now read the files in the directory.  You no longer
	     need to edit it to add themes

[08152000] - Fixed a problem with the calendar not showing the months in the users
	     langague preference.
	   - Added the new alpha human resources section
	   - Added the new alpha inventory program
	   - Added new global var $phpgw_flags
	     replaces $currentapp, $noheader, $nonavbar
	   - Small change in the API with the lang files.
	   - Added missing files for french
	   - pop_sort() accelerated by using temp file for storing header
	     information - speed factor > 2 for re-sorts!
	   - Added a temp quick fix for PostgreSQL not working in the calendar
	     I am using the old code, so there might be bugs.  This is
	     just until we can find a better solution.
	   - Added a warning message if users are still apart of a group thats
	     about to be deleted.
	   - a bunch of error messages where shown when some header info was
	     split into multiple lines (on pop account), and address info
	     could not be built in this case. Fixed.
	   - Added Dutch and Korean langague support
	   - Added default app and default sorting order preference
	   - Fixed multipart handling on pop3
	   - Added config option for where the "Powered by" can go, top or bottom
	   - add/edit/delete accounts code has been cleaned up greatly.
	   - Better error control in the accounts section
	   - Fixed check_owner() in session class not reporting the owner properly

[08072000] - Fixed current users next matchs icons not showing up properly
	   - Added support to save sent-messages into Sent folder
	   - Fixed bug where users always see the mail server connection
	     error on a new installation