@@ -16,6 +16,8 @@
 	   - Added feature to be able to remove users from a group automaticly
 	   - changetheme.php will now read the files in the directory.  You no longer
 	     need to edit it to add themes
+	   - Fixed a problem with the default sorting order messing up the next matchs
+	     while viewing a message
 
 [08152000] - Fixed a problem with the calendar not showing the months in the users
 	     langague preference.
